--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
 /vendor
-# Created by https://www.gitignore.io/api/phpstorm
-# Edit at https://www.gitignore.io/?templates=phpstorm
-
+.phpunit.result.cache
 ### PhpStorm ###
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
-# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
 .idea/**/workspace.xml
